# playing_aws

./: .excalidraw  .gitignore  AGENTS.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d1b0353f7dbe_create_todos_table.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: todos.py
frontend/: next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
nginx/: default.conf
