[project]
name = "backend"
version = "0.1.0"
description = "Todo App Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
